[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
serde_json = "1.0"
serde  = { version="1.0", features=["derive"] }
tracing = { version = "0.1.4" }
secp256k1 = { version = "0.28" , features=["rand-std", "serde" ]}