[package]
name = "chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10"
serde_json = "1.0"
serde  = { version="1.0", features=["derive"] }
tracing = { version = "0.1.4" }
secp256k1 = { version = "0.28" , features=["rand-std", "serde" ]}
ripemd = "0.1.3"
bs58 = "0.5.0"
reqwest = { version="0.11.23", features=["json"] }
tokio = { version = "1", features=["full"] }
dotenv = "0.15"
typenum = "1.17"
hex = "0.4"
